# xtensor-python

./: .gitignore  CMakeLists.txt  environment-dev.yml  meson.build  meson_options.txt
.github/workflows/: linux.yml  osx.yml  windows.yml
benchmark/: CMakeLists.txt  main.cpp  main_nanobind.cpp  run_benchmarks.py  setup.py  setup_nanobind.py  test_noconvert.py
include/xtensor-python/: pyarray.hpp  pytensor.hpp  pyvectorize.hpp
include/xtensor-python/nanobind/: pyarray.hpp  pycontainer.hpp  pynative_casters.hpp  pytensor.hpp  pytensor.hpp.backup  pyvectorize.hpp  xtensor_type_caster_base.hpp
include/xtensor-python/pybind11/: pyarray.hpp  pycontainer.hpp  pynative_casters.hpp  pytensor.hpp  pyvectorize.hpp  xtensor_type_caster_base.hpp
subprojects/: .gitignore
test/: CMakeLists.txt  main.cpp  meson.build  test_pyarray.cpp  test_pyarray_traits.cpp  test_pytensor.cpp  test_pyvectorize.cpp  test_sfinae.cpp
test_python/: CMakeLists.txt  debug_strided.cpp  main.cpp  main_nanobind.cpp  setup.py  setup_nanobind.py  test_pyarray.py
