# xtensor-python meson build options

option('use_pybind11',
    type: 'combo',
    choices: ['auto', 'enabled', 'disabled'],
    value: 'auto',
    description: 'Enable pybind11 backend'
)

option('use_nanobind',
    type: 'combo',
    choices: ['auto', 'enabled', 'disabled'],
    value: 'auto',
    description: 'Enable nanobind backend'
)

option('tests',
    type: 'boolean',
    value: false,
    description: 'Build test suite'
)
